# numrus

./: .gitignore  CREDITS.md  Cargo.toml  README.md
.github/workflows/: build_wheels.yml  rust.yml
bindings/python/: Cargo.toml  pyproject.toml  setup.py
bindings/python/benchmarks/: test_performance_addition.py  test_performance_basics.py  test_performance_dot.py  test_performance_gemm.py  test_performance_gemv.py  test_performance_mean.py  test_performance_mean_nd.py  test_performance_median.py  test_performance_median_nd.py  test_performance_min.py  test_performance_norm.py
bindings/python/numrus/: __init__.py  functions.py  num_array_class.py
bindings/python/src/: array_f32.rs  array_f64.rs  array_u8.rs  cogrecord.rs  functions.rs  int8_gemm.rs  lib.rs
bindings/python/tests/: test_array_ops.py  test_basics.py  test_complex_flows.py  test_dot_product.py  test_matrix_multiplication.py  test_mean.py  test_median.py  test_min_max.py  test_norm.py
numrus-blas/: Cargo.toml
numrus-blas/benches/: blas_benchmarks.rs
numrus-blas/examples/: gemm_benchmark.rs
numrus-blas/src/: bf16_gemm.rs  int8_gemm.rs  level1.rs  level2.rs  level3.rs  lib.rs
numrus-clam/: Cargo.toml
numrus-clam/src/: compress.rs  holo_search.rs  lib.rs  lod_pyramid.rs  search.rs  tree.rs
numrus-core/: Cargo.toml
numrus-core/src/: bf16_hamming.rs  blackboard.rs  compute.rs  fingerprint.rs  layout.rs  lib.rs  mkl_ffi.rs  parallel.rs  prefilter.rs  rng.rs  simd.rs  simd_avx2.rs
numrus-mkl/: Cargo.toml
numrus-mkl/benches/: mkl_benchmarks.rs
numrus-mkl/src/: fft.rs  lapack.rs  lib.rs  vml.rs
numrus-nars/: Cargo.toml
numrus-nars/src/: bind.rs  classify.rs  granger.rs  lib.rs  trace.rs
numrus-rs/: Cargo.toml
numrus-rs/benches/: array_benchmarks.rs  hdc_benchmarks.rs
numrus-rs/src/: lib.rs  traits.rs
numrus-rs/src/helpers/: parallel.rs
numrus-rs/src/num_array/: array_struct.rs  binding_matrix.rs  bitwise.rs  cogrecord.rs  constructors.rs  graph.rs  hdc.rs  impl_clone_from.rs  linalg.rs  manipulation.rs  mod.rs  operations.rs  projection.rs  statistics.rs
numrus-rs/src/simd_ops/: mod.rs
numrus-rs/tests/: integration_tests.rs
numrus-substrate/: Cargo.toml
numrus-substrate/src/: absorb.rs  flush.rs  lib.rs
