[package]
name = "numrus-blas"
version = "0.1.0"
edition = "2021"
description = "Pure Rust BLAS implementation with AVX-512/AVX2 SIMD — drop-in OpenBLAS replacement"

[features]
default = ["avx512"]
avx512 = ["numrus-core/avx512"]
avx2 = ["numrus-core/avx2"]
mkl = ["numrus-core/mkl"]

[dependencies]
numrus-core = { path = "../numrus-core", features = ["avx512"] }

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "blas_benchmarks"
harness = false
