[package]
name = "numrus-nars"
version = "0.1.0"
edition = "2021"
description = "Non-axiomatic reasoning: binding algebra, Granger causality, causal trace, learning classification"

[features]
default = ["avx512"]
avx512 = ["numrus-core/avx512"]
avx2 = ["numrus-core/avx2"]

[dependencies]
numrus-core = { path = "../numrus-core", default-features = false }
rand = "0.8"
