[package]
name = "numrus-rs"
version = "0.1.0"
edition = "2021"

[features]
mkl = ["numrus-mkl/mkl"]

[dependencies]
numrus-core = { path = "../numrus-core", features = ["avx512"] }
numrus-blas = { path = "../numrus-blas", features = ["avx512"] }
numrus-mkl = { path = "../numrus-mkl", features = ["avx512"] }

[dev-dependencies]
criterion = "0.3"
ndarray = "0.16.1"
nalgebra = "0.33.0"

[[bench]]
name = "array_benchmarks"
harness = false

[[bench]]
name = "hdc_benchmarks"
harness = false
